Monitor activity added

--- a/Project/app/src/main/assets/HTML/Service/index.html
+++ b/Project/app/src/main/assets/HTML/Service/index.html
@@ -19,6 +19,7 @@
   <button onclick="window.location = 'android.html'">Android</button>
   <button onclick="window.location = 'json.html'">JSON</button>
   <button onclick="window.location = 'settings.html'">Settings</button>
+  <button onclick="window.location = 'monitor.html'">Monitor</button>
   <button onclick="window.location = 'https://lab.open-roberta.org'">ORL-Server</button>
 </p>
 </html>
