Welcome page updated (language)

--- a/Project/app/src/main/assets/HTML/welcome_de.html
+++ b/Project/app/src/main/assets/HTML/welcome_de.html
@@ -27,8 +27,8 @@ img {
 </style>
 </head>
 <body>
-<div class="header">Welcome to <i>ORB-Mobile</i>!</div>
+<div class="header">Willkommen zur <br><i>ORB-Mobile</i> App!</div>
 <div class="img"><img src="logo.png" alt="ORB"></img></div>
-<div class="text">Start your work by selecting an option from the menu ...</div>
+<div class="text">Starte Dein Projekt mit einer Aktion aus dem Menü ...</div>
 </body>
 </html>
