Servo.mode renamed to Servo.speed

--- a/Project/app/src/main/assets/HTML/Service/json.html
+++ b/Project/app/src/main/assets/HTML/Service/json.html
@@ -42,8 +42,8 @@ var propToORB = {
            {mode:2,speed:200,pos:0},
            {mode:0,speed:0,pos:0},
            {mode:0,speed:0,pos:0}],
-    Servo:[{mode:0,pos:0},
-           {mode:0,pos:0}]
+    Servo:[{speed:0,pos:0},
+           {speed:0,pos:0}]
   }
 };
 
@@ -117,8 +117,8 @@ function motorStop()
              {mode:0,speed:0,pos:0},
              {mode:0,speed:0,pos:0},
              {mode:0,speed:0,pos:0}],
-      Servo:[{mode:0,pos:0},
-             {mode:0,pos:0}]
+      Servo:[{speed:0,pos:0},
+             {speed:0,pos:0}]
     }
   };
 	send( JSON.stringify(cmd) );
