--- a/Project/app/src/main/assets/HTML/Service/motor.html
+++ b/Project/app/src/main/assets/HTML/Service/motor.html
@@ -42,8 +42,8 @@ var propToORB = {
            {mode:0,speed:0,pos:0},
            {mode:0,speed:0,pos:0},
            {mode:0,speed:0,pos:0}],
-    Servo:[{mode:0,pos:0},
-           {mode:0,pos:0}]
+    Servo:[{speed:0,pos:0},
+           {speed:0,pos:0}]
   }
 };
 
@@ -83,8 +83,8 @@ var cmd = {
            {mode:0,speed:0,pos:0},
            {mode:0,speed:0,pos:0},
            {mode:0,speed:0,pos:0}],
-    Servo:[{mode:0,pos:0},
-           {mode:0,pos:0}]
+    Servo:[{speed:0,pos:0},
+           {speed:0,pos:0}]
   }};
 
   send(JSON.stringify(cmd) );
