--- a/Project/app/src/main/assets/HTML/Service/monitor.html
+++ b/Project/app/src/main/assets/HTML/Service/monitor.html
@@ -88,8 +88,8 @@ var propToORB = {
            {mode:2,speed:0,pos:0},
            {mode:0,speed:0,pos:0},
            {mode:0,speed:0,pos:0}],
-    Servo:[{mode:0,pos:0},
-           {mode:0,pos:0}]
+    Servo:[{speed:0,pos:0},
+           {speed:0,pos:0}]
   }
 };
 
