--- a/Project/app/src/main/assets/HTML/Service/sensor.html
+++ b/Project/app/src/main/assets/HTML/Service/sensor.html
@@ -45,8 +45,8 @@ var propToORB = {
            {mode:0,speed:0,pos:0},
            {mode:0,speed:0,pos:0},
            {mode:0,speed:0,pos:0}],
-    Servo:[{mode:0,pos:0},
-           {mode:0,pos:0}]
+    Servo:[{speed:0,pos:0},
+           {speed:0,pos:0}]
   }
 };
 
